# python-basic

./: .gitignore  Pipfile  README.md  logger.py  music.sqlite  pyproject.toml  requirements.txt
labs/: decompress-git-object.py  faker-data.py  find-git-object.py  howdoi-test.py  math-lab.ipynb  math-lab.py  os.ipynb  random-lab.ipynb  redis-lab.ipynb  requests.ipynb
labs/api-performance-testing/: locus.md
samples/: 3des.py  enum-sample.py  function_humansize.py  input_file.txt  mongodb-demo.py  mu3-download.py  opcode-sample.py  output.txt  python-sample.ipynb  split_semicolon_with_new_line.py  sqlite3-demo.py  square_root_bi.py
samples/kafka-example/: README.md  consumer.sh  producer.py  producer.sh
samples/parse-yaml-example/: parse-yaml.py
samples/rabbitmq-example/: README.md  consumer.py  publisher.py
src/python_basic/: class-vs-object.py  class.ipynb  debugging.py  dictionary.ipynb  exceptions.ipynb  exceptions.py  expressions.py  file.ipynb  function.ipynb  functions.py  generator.py  if-conditions.py  iterator.ipynb  list-comprehensions.py  list.ipynb  list.py  loops.py  maps.py  module.ipynb  module.py  object-mutable-vs-immutable.ipynb  object-vs-value.py  regex.py  scope-global-nonlocal.ipynb  scoping.py  set.ipynb  stack.py  string-encode.py  string-print.py  string.ipynb  thread-basic.py  tuple.ipynb  variables.py
src/python_basic/.ipynb_checkpoints/: function-checkpoint.ipynb
