[project]
name = "python_basic"
version = "0.0.7"
authors = [
  { name="liuning0820", email="liuning0820@outlook.com" },
]
description = "Learn Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"